<?xml version="1.0"?>
<package>
  <name>sa_lidar_driver</name>
  <version>0.0.1</version>
  <description>
    ROS package for S-A LiDAR.
  </description>
    <license>BSD</license>
  <maintainer email="luca911014@gmail.com">JDY</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export></export>
</package>
